--- a/Modelo/My Project/Resources.resx
+++ b/Modelo/My Project/Resources.resx
@@ -268,4 +268,7 @@
   <data name="logo economarket facturas1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo economarket facturas1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="avicola3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\avicola3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
